Fix flexbox to work correctly on Safari

--- a/src/App.css
+++ b/src/App.css
@@ -54,16 +54,14 @@ body {
 }
 
 #calculator-buttons {
-	flex: 3;
+	max-width: 12em;
 	display: flex;
 	justify-content: space-around;
 	flex-flow: row wrap;
 	height: 15em;
-	/*width: 15em;*/
 }
 
 #operations {
-	flex: 1;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
@@ -80,7 +78,6 @@ body {
 #operations > * {
 	background-color: #7a14ff;
 	line-height: 2.8em;
-	/*width: 3.7em;*/
 }
 
 #calculator-buttons > *, #operations > * {
